Explicitly disable texture buffers on ANGLE renderer

Angle has suboptimal implementation of texture buffers. It does a
long chain of copy operations just to upload the buffer into a
texture:

source user data -> ram buffer -> staging buffer -> native buffer -> texture

It makes painting with huge brushes really slow.

BUG:444919